# serialport

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
sample/: build.gradle
sample/src/androidTest/java/com/dazhi/sample/: ExampleInstrumentedTest.java
sample/src/main/java/com/dazhi/sample/: MainActivity.java
sample/src/main/res/layout/: activity_main.xml
sample/src/main/res/values/: strings.xml
serialport/: build.gradle
serialport/src/main/: AndroidManifest.xml
serialport/src/main/cpp/: CMakeLists.txt  SerialPort.c  SerialPort.h  native-lib.cpp
serialport/src/main/java/com/dazhi/serialport/: CmnSerialPort.java  JniSerialPort.java  SerialPort.java
